Добавлена статистика по обработанным сообщениям
